3.0 regression: directory parser recurses infinitely
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont added Component::Input: file system Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Input: file system Severity::normal Type::bug Version::master git + 1 deleted label
- Rémi Denis-Courmont changed milestone to %3.0 FF
changed milestone to %3.0 FF
- Developer
Can't reproduce. Is there any specific setup required?
- Author Maintainer
Cannot not reproduce. AFAICT, it affects all infinitely recursive setups.
- Author Maintainer
Confirmed on two different computers. Cannot find a setup where this would not reproduce.
- Author Maintainer
Possibly caused by 4455e6d2; too far back to compile and bisect.
- Filip Roséen assigned to @FilipRoseen-refp and unassigned @MigrationBot
assigned to @FilipRoseen-refp and unassigned @MigrationBot
As far as I can tell, the culprit is that we always schedule added entities for preparsing, but the commit linked below makes the assumption that
libvlc_MetadataRequest
is only called when explicitly asked. I will write a patch for this as soon as I wake up.= f9aab1fe34
=libvlc_MetaRequest: increment item i_preparse_depth - Owner
Milestone renamed
- Jean-Baptiste Kempf changed milestone to %3.0.0
changed milestone to %3.0.0
- Owner
Related to #17507 (closed)?
- Jean-Baptiste Kempf assigned to @tguillem and unassigned @FilipRoseen-refp
assigned to @tguillem and unassigned @FilipRoseen-refp
- Owner
Ticket retargeted after milestone closed
- Jean-Baptiste Kempf changed milestone to %3.0.1
changed milestone to %3.0.1
- Jean-Baptiste Kempf changed milestone to %3.0.x maintenance
changed milestone to %3.0.x maintenance
- Owner
Fixed by d7d9f8e4
- Filip Roséen assigned to @FilipRoseen-refp and unassigned @tguillem
assigned to @FilipRoseen-refp and unassigned @tguillem
- Filip Roséen added Status::fixed label
added Status::fixed label
- Filip Roséen closed
closed
- Jean-Baptiste Kempf changed milestone to %3.0.4
changed milestone to %3.0.4