playlist: item: playlist_Preparse: use vlc_MetadataRequest

As the functionality provided by the externally accessible
libvlc_MetadataRequest is not satisfactory for the usage in
playlist_Preparse, the call has been replaced by an invocation of
vlc_MetadataRequest (that will not result in indefinite recursion).

fixes: #18236
refs: #20865
Signed-off-by: Thomas Guillem <thomas@gllm.fr>
(cherry picked from commit d7d9f8e4b61f4ab30bc2a3cefc64b09b8236a2a4)
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>